--- a/src/main/resources/templates/mypage/user-comment.html
+++ b/src/main/resources/templates/mypage/user-comment.html
@@ -89,7 +89,7 @@
                 <a href="/member/user-order" >예매 내역 조회 <i></i></a>
               </li>
               <li >
-                <a href="/user/mycgv/event/" title="현재선택">회원 탈퇴(미구현) <i></i></a>
+                <a href="/member/withdrawal" title="현재선택">회원 탈퇴(미구현) <i></i></a>
               </li>
             </ul>
           </div>
