--- a/src/main/resources/templates/mypage/mypage-th.html
+++ b/src/main/resources/templates/mypage/mypage-th.html
@@ -8,7 +8,8 @@
 <div class="col-detail" id="mycgv_contents">
     <div class="tit-mycgv">
         <h3>최근 예매내역</h3>
-        <p><em th:if="${orderList != null}" th:text="${orderList.size()}">총 0건</em> <a href="/member/user-order">예매내역 더보기</a></p>
+        <p><em th:if="${orderList != null}" th:text="${orderList.size()}">총 0건</em><a href="/member/user-order" th:if="${orderList != null}">예매내역 더보기</a></p>
+        <p><em th:unless="${orderList != null}">총 0건</em><a href="/member/user-order" th:unless="${orderList != null}">예매내역 더보기</a></p>
         <span>예매번호로만 티켓을 찾을 수 있으니 반드시 확인 부탁드립니다.</span>
     </div>
     <form name="aspnetForm" method="post" action="./" id="aspnetForm" novalidate="novalidate">
@@ -30,7 +31,9 @@
                         <div class="box-number">
                             <em>예매번호</em>
                             <strong th:if="${recentOrder != null}" th:text="${recentOrder.id}">0056-0102-4966-250</strong>
+                            <strong th:unless="${recentOrder != null}" ></strong>
                             <span th:if="${recentOrder != null}" th:text="${recentOrder.indate}">(2023.01.02)</span>
+                            <span th:unless="${recentOrder != null}" ></span>
                         </div>
                         <div class="box-image">
                             <a href="/movies/detail-view/?midx=86072">
@@ -42,20 +45,23 @@
                         <div class="box-contents has_not_storeitem">
                             <dl>
                                 <dt>
-                                    <em th:if="${recentMovie != null}" th:text="${recentMovie}">아바타-물의 길(3D)</em>
+                                    <em th:if="${recentMovie != null}" th:text="${recentMovie.movieNm}">아바타-물의 길(3D)</em>
+                                    <em th:unless="${recentMovie != null}"></em>
                                 </dt>
                                 <dd>
                                     <em>관람극장</em>
-                                    <strong th:if="${recentTheater != null}" th:text="${recentTheater}">CGV 강남</strong>
-                                    <!--                                                    <a href="javascript:theaterMove('0056');">[극장정보]</a>-->
+                                    <strong th:if="${recentTheater != null}" th:text="${recentTheater.theaterName}">CGV 강남</strong>
+                                    <strong th:unless="${recentTheater != null}" th:text="${recentTheater}"></strong>
                                 </dd>
                                 <dd>
                                     <em>관람일시</em>
                                     <strong th:if="${recentOrder != null}" th:text="${recentOrder.getScreenDate()}">2023.01.08(일) 20:00</strong>
+                                    <strong th:unless="${recentOrder != null}" ></strong>
                                 </dd>
                                 <dd>
                                     <em>관람좌석</em>
                                     <strong th:if="${recentOrder != null}" th:text="${recentOrder.getSeat()}">H 14</strong>
+                                    <strong th:unless="${recentOrder != null}"></strong>
                                 </dd>
                             </dl>
                         </div>
@@ -64,13 +70,14 @@
                                 <dl>
                                     <dt>총 결제금액</dt>
                                     <dd>
-                                        <strong class="txt-lightblue"th:if="${recentOrder != null}" th:text="${recentOrder.getTotalPrice()} + '원'">17,000원</strong>
+                                        <strong class="txt-lightblue" th:if="${recentOrder != null}" th:text="${recentOrder.getTotalPrice()} + '원'">17,000원</strong>
+                                        <strong class="txt-lightblue" th:unless="${recentOrder != null}"></strong>
                                     </dd>
                                 </dl>
                                 <div class="set-btn">
                                     <input type="hidden" class="reserve-no" name="reserve-no" value="Bj2L6yI8Pj08Hr9n6+k4EEF/MJKQmTcD2CKQGs+A4WI=">
-                                    <button type="button" title="새창" class="round inblack sendsmspopup" onclick="submitMail()"><span>문자보내기</span></button>
-                                    <button type="button" data-status="94" class="round black cancel" onclick="noshowYN()"><span>예매취소</span></button>
+                                    <button type="button" title="새창" class="round inblack sendsmspopup" onclick="submitMail()" th:if="${recentOrder != null}"><span th:if="${recentOrder != null}">문자보내기</span></button>
+                                    <button type="button" data-status="94" class="round black cancel" onclick="noshowYN()" th:if="${recentOrder != null}"><span th:if="${recentOrder != null}">예매취소</span></button>
                                 </div>
                             </div>
                         </div>
@@ -84,7 +91,8 @@
             <div class="box-inner">
                 <div class="tit-mycgv">
                     <h3>나의 댓글 목록</h3>
-                    <p><em th:if="${commentList != null}" th:text="${commentList.size()} + '건'">0건</em> <a href="/member/user-comment">MY 댓글목록 더보기</a></p>
+                    <p><em th:if="${commentList != null}" th:text="${commentList.size()} + '건'">0건</em> <a href="/member/user-comment" th:if="${commentList != null}">MY 댓글목록 더보기</a></p>
+                    <p><em th:unless="${commentList != null}">0건</em> <a href="/member/user-comment" th:unless="${commentList != null}">MY 댓글목록 더보기</a></p>
                 </div>
             </div>
         </div>
