--- a/src/main/resources/templates/mypage/mypage-th.html
+++ b/src/main/resources/templates/mypage/mypage-th.html
@@ -37,9 +37,9 @@
                         </div>
                         <div class="box-image">
                             <a href="/movies/detail-view/?midx=86072">
-                                                <span class="thumb-image">
-                                                    <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000086/86072/86072_126.jpg" alt="아바타-물의 길(3D) 포스터" onerror="errorImage(this)">
-                                                </span>
+                                <span class="thumb-image">
+                                    <img src="https://img.cgv.co.kr/Movie/Thumbnail/Poster/000086/86072/86072_126.jpg" alt="아바타-물의 길(3D) 포스터" onerror="errorImage(this)">
+                                </span>
                             </a>
                         </div>
                         <div class="box-contents has_not_storeitem">
@@ -140,7 +140,7 @@
                     alert("예매를 취소했습니다.")
                     location.reload();
                 }else{
-                    alert("제품 삭제를 실패 하였습니다.");
+                    alert("예매 취소를 실패 하였습니다.");
                 }
             }
         })
